--- a/page-01einfuehrung.html
+++ b/page-01einfuehrung.html
@@ -19,6 +19,9 @@
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
@@ -262,6 +265,69 @@ $(document).ready(function () {
 
 
 
+<style type="text/css">
+
+#TOC {
+  margin: 25px 0px 20px 0px;
+}
+@media (max-width: 768px) {
+#TOC {
+  position: relative;
+  width: 100%;
+}
+}
+
+@media print {
+.toc-content {
+  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
+  float: right;
+}
+}
+
+.toc-content {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+div.main-container {
+  max-width: 1200px;
+}
+
+div.tocify {
+  width: 20%;
+  max-width: 260px;
+  max-height: 85%;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div.tocify {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  div.tocify {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+.tocify ul, .tocify li {
+  line-height: 20px;
+}
+
+.tocify-subheader .tocify-item {
+  font-size: 0.90em;
+}
+
+.tocify .list-group-item {
+  border-radius: 0px;
+}
+
+
+</style>
+
+
 
 </head>
 
@@ -269,6 +335,16 @@ $(document).ready(function () {
 
 
 <div class="container-fluid main-container">
+
+
+<!-- setup 3col/9col grid for toc_float and main content  -->
+<div class="row-fluid">
+<div class="col-xs-12 col-sm-4 col-md-3">
+<div id="TOC" class="tocify">
+</div>
+</div>
+
+<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -376,22 +452,23 @@ $(document).ready(function () {
 <p>Eine frei verfügbare Alternative zu Microsoft Excel ist das Programm <strong>Libre Office Calc</strong>, welches Sie <a href="https://de.libreoffice.org/discover/calc/">hier</a> herunterladen können. Auch mit Libre Office Calc kann man die meisten Dinge machen. Die Übungen in diesem Seminar werden aber trotzdem mit Excel durchgeführt.</p>
 <p><br /></p>
 <p><br /></p>
-<div id="erste-schritte---die-exceloberfläche" class="section level2">
-<h2>Erste Schritte - die Exceloberfläche</h2>
+<div id="erste-schritte---die-exceloberfläche" class="section level1">
+<h1><span class="header-section-number">1</span> Erste Schritte - die Exceloberfläche</h1>
 <p>Wenn Sie Excel installiert haben und öffnen, sieht die Oberfläche zunächst so aus, wie in dem Bild unten.</p>
 <p>Sie haben hier die Möglichkeit, aus verschiedenen “Vorlagen” zu wählen, bereits existierende Dateien aus einem Ordner heraus zu öffnen, oder ein neues Dokument zu beginnen. Excel-Dokumente heißen <strong>Arbeitsmappen</strong>. Um eine neue Arbeitsmappe zu erstellen, klicken Sie ganz einfach auf <strong>Leere Arbeitsmappe</strong>.</p>
 <p><br /></p>
 <p><img src="images/q1_01einf/excel_oeffnen.PNG" style="width:70.0%" /> <br /> <br /></p>
-<div id="die-arbeitsmappenansicht" class="section level3">
-<h3>Die Arbeitsmappenansicht</h3>
+<div id="die-arbeitsmappenansicht" class="section level2">
+<h2><span class="header-section-number">1.1</span> Die Arbeitsmappenansicht</h2>
 <p>Nachdem sie auf “Leere Arbeitsmappe” geklickt haben, gelangen Sie zur Arbeitsmappenansicht, die so aussieht, wie im Bild unten dargestellt. Im Wesentlichen sieht eine Arbeitsmappe aus wie eine riesige Tabelle, in der es jede Menge <strong>Spalten</strong> und <strong>Zeilen</strong> gibt. Spalten sind durch <strong>Buchstaben</strong> (A, B, C, …) und Zeilen durch <strong>Zahlen</strong> (1, 2, 3, …) gekennzeichnet. Die Schnittstelle zwischen einer Spalte und einer Zeile nennt man in Excel <strong>Zelle</strong>. Durch die Spalten- und Zeilenbeschriftungen kann also jede Zelle eindeutig benannt werden. Im Bild unten sind zur Verdeutlichung zwei Zellen rot markiert. Zum Beispiel befindet sich die erste rot markierte Zelle Spalte <strong>R</strong> und dort wiederum in Zeile <strong>3</strong>. Diese Zelle heißt also <strong>R3</strong>.</p>
 <p><img src="images/q1_01einf/tabelle_uebersicht.PNG" /> <br /> <br /></p>
 <p>Sie können mit Ihrer Maus in eine beliebe Zelle klicken. Die Zelle, die Sie anklicken, wird dann zur besseren Orientierung durch einem grünen Rahmen markiert. Wie Sie sehen können, ist im Bild die Zelle <strong>A1</strong> markiert.</p>
 <p>Sie können dann Einträge in eine ausgewählte Zelle hineinschreiben. Solche Einträge können entweder <strong>Text</strong> oder <strong>Zahlen</strong> sein. In den meisten Fällen werden wir dort natürlich Zahlen vorfinden, denn wir wollen ja in diesem Seminar Excel benutzen, um zu rechnen und statistische Analysen durchzuführen. Text verwendet man in der Regel, um bestimmte Spalten, Zeilen, oder Zellen mit einer Beschriftung zu versehen.</p>
 <p><br /></p>
 </div>
-<div id="eine-erste-tabelle-und-eine-erste-berechnung" class="section level3">
-<h3>Eine erste Tabelle und eine erste Berechnung</h3>
+</div>
+<div id="eine-erste-tabelle-und-eine-erste-berechnung" class="section level1">
+<h1><span class="header-section-number">2</span> Eine erste Tabelle und eine erste Berechnung</h1>
 <p><strong>Beispiel – Die Lebenserwartung von Eichhörnchen und Grauhörnchen:</strong></p>
 <p>Wir könnten jetzt zum Beispiel eine kleine Tabelle erstellen, in der wir uns die Lebenserwartungen von amerikanischen Grauhörnchen und europäischen Eichhörnchen notieren. Diese Tabelle ist in der ersten Abbildung unten dargestellt. Wie Sie dort sehen können, beträgt die durschnittliche Lebenserwartung von Eichhörnchen drei Jahre (das steht in… genau, in Zelle <strong>B2</strong>) und die von Grauhörnchen zehn Jahre (Zelle <strong>B3</strong>). Ein ziemlich großer Unterschied.</p>
 <p>Das schöne an Excel ist, dass man damit nicht nur Dinge notieren, sondern auch damit <strong>rechnen</strong> kann. Wir könnten jetzt z.B. die Differenz der zwei notierten Lebenserwartungen berechnen und das Ergebnis in Zelle <strong>D3</strong> hineinschreiben.</p>
@@ -402,15 +479,14 @@ $(document).ready(function () {
 <p>Ein weniger offensichtlicher aber gewaltiger Vorteil ist, dass die Ergebniszelle (<strong>D3</strong>) auf diese Weise <strong>“dynamisch”</strong> wird. Damit ist gemeint, dass sich das Ergebnis der Berechnung <strong>automatisch anpasst</strong>, wenn man in der Ausgangstabelle die <strong>Werte verändert</strong>. Stellen Sie sich vor, eine neue Studie hätte ergeben, dass europäische Eichhörnchen doch älter werden als zunächst gedacht (eine schöne Nachricht). Ändern Sie die “3” in eine “4”. Was passiert mit der berechneten Differenz? Genau, das Ergebnis wird automatisch aktualisiert (6 statt 7).</p>
 <p><br /></p>
 </div>
-<div id="speichern-einer-arbeitsmappe" class="section level3">
-<h3>Speichern einer Arbeitsmappe</h3>
+<div id="speichern-einer-arbeitsmappe" class="section level1">
+<h1><span class="header-section-number">3</span> Speichern einer Arbeitsmappe</h1>
 <p>Eine so wichtige Tabelle wie unsere Hörnchenlebenserwartungstabelle darf natürlich auf keinen Fall verloren gehen. Deshalb sollte man wissen, wie man Arbeitsmappen <strong>abspeichern</strong> kann. Das funktioniert in Excel wie mit den meisten Programmen, die Sie schon kennen.Klicken Sie oben im <strong>grünen Bereich</strong> des Programms auf <strong>Datei</strong>. In dem erscheinenden Menü finden Sie die Auswahl <strong>“Speichern unter”</strong>. Damit können Sie die gegenwärtige Arbeitsmappe in einem beliebigen Ordner Ihres Rechners speichern. Am besten erstellen Sie sich einen neuen Ordner, den Sie “Quanti 1” nennen. Dort können Sie dann alle Excel-Dateien, die Sie im Verlauf dieses Semesters erstellen werden, sammeln.</p>
 <p><br /></p>
 <p><img src="images/q1_01einf/excel_speichern.PNG" style="width:70.0%" /> <br /> <br /></p>
 </div>
-</div>
-<div id="ein-etwas-komplexeres-beispiel" class="section level2">
-<h2>Ein etwas komplexeres Beispiel</h2>
+<div id="ein-etwas-komplexeres-beispiel" class="section level1">
+<h1><span class="header-section-number">4</span> Ein etwas komplexeres Beispiel</h1>
 <p>Nachdem Sie sich nun ein wenig mit der Excel-Umgebung vertraut gemacht haben, wollen wir uns jetzt zum Ende dieser Einführungssitzung noch ein etwas umfangreicheres Beispiel ansehen.</p>
 <p><strong>Die Geburtstage der Studierenden im Wintersemester 19/20:</strong></p>
 <p>Im Bild unten sehen Sie eine ziemlich große Tabelle, in der die Gebutstagsdaten aller Studierenden der Uni Göttingen aufgelistet sind, die zum Zeitpunkt des 10.10.2019 an der Universität immatrikuliert gewesen waren (selbstverständlich alles anonymisiert). Mit Hilfe der Daten in dieser Tabelle wollen wir uns jetzt noch einige sehr nützliche Excel-Funktionen ansehen.</p>
@@ -424,7 +500,8 @@ $(document).ready(function () {
 <p><strong>TIPP:</strong> <em>Ganz unten auf der Seite finden Sie auch ein Tutorial-Video, in dem wir einen Teil der Lösung der Aufgaben besprechen. Bevor Sie das Video schauen, sollten Sie aber zunächst weiterlesen.</em></p>
 </div>
 <p><br /> <br /></p>
-<p><strong>Aufgabe 1) Wie viele Studierende waren im WiSe 2019/2020 eingeschrieben?</strong></p>
+<div id="aufgabe-1-wie-viele-studierende-waren-im-wise-20192020-eingeschrieben" class="section level2">
+<h2><span class="header-section-number">4.1</span> Aufgabe 1) Wie viele Studierende waren im WiSe 2019/2020 eingeschrieben?</h2>
 <p><strong>Die erste Excel-Funktion:</strong></p>
 <p>Das Ergebnis soll in Zelle <strong>J33</strong> geschrieben werden, also in die Zelle rechts neben der Zelle, die <strong>“Gesamtanzahl”</strong> heißt. Eine Gesamtzahl lässt sich in Excel sehr schnell mit Hilfe der so genannten <strong>“Summenfunktion”</strong> ermitteln. Die Summenfunktion ist die erste <strong>Excel-Funktion</strong>, die Sie jetzt kennenlernen werden. Die Notation der Funktion ist <strong>=SUMME()</strong>.</p>
 <p>So gehts: klicken Sie in Zelle <strong>J33</strong> und schreiben Sie wieder “<span class="math inline">\(=\)</span>”. Schreiben Sie unmittelbar dahinter “<strong>SUMME</strong>” und öffnen sie eine runde Klammer, “<strong>(</strong>”. Markieren Sie nun mit ihrer Maus (klicken und gedrückt halten) den Spaltenbereich in Spalte <strong>F</strong>, in der die Anzahlen der Studierenden aufgelistet sind.Sie sollten einen farbigen Rahmen um diesen Spaltenbereich herum sehen. Danach beenden Sie die begonnende Funktion mit einer geschlossenen Klammer, “<strong>)</strong>”, und drücken Enter. Sie sollten jetzt das Ergebnis sehen (30405). So viele Studierende waren also im letzten Jahr an der gesamten Uni Göttingen eingeschrieben.</p>
@@ -432,7 +509,9 @@ $(document).ready(function () {
 <p>Das Markieren von größeren Bereichen kann übrigens durch ein Tastaturkürzel stark vereinfacht werden. Wählen Sie die erste Zelle der Spalte “Anzahl Immatrikulierte” (F6) durch Mausklick aus. Drücken Sie dann zunächst sowohl die Taste Strg als auch Shift (die Umstelltaste, die man auch zum Großschreiben nutzt). Halten Sie diese beiden Tasten gedrückt und drücken Sie nun zusätzlich die Pfeiltaste nach unten. Die gesamten Daten in der Spalte werden nun markiert (Excel erkennt automatisch, wo die Daten aufhören). Dasselbe Vorgehen würde natürlich auch nach links, rechts oder oben funktionieren. Wenn sie z.B. Zelle A6 anklicken, dasselbe Vorgehen wiederholen, aber die Pfeiltaste nach rechts drücken, wird die gesamte erste Zeile der Tabelle markiert. Wenn diese erste Zeile markiert ist, können Sie unter Gedrückthalten von Strg und shift auch nochmal die Pfeiltaste nach unten drücken. Nun ist die gesamte Tabelle markiert. Bei einem Mac funktioniert das Vorgehen genauso, aber mit Befehlstaste, Shift, und den gewünschten Pfeiltasten.</p>
 <p><br /></p>
 <p><img src="images/q1_01einf/excel_summe.PNG" style="width:100.0%" /> <br /> <br /></p>
-<p><strong>Aufgabe 2) Zählen Sie aus, wie viele Studierende in jeder Jahreszeit Geburtstag haben</strong></p>
+</div>
+<div id="aufgabe-2-zählen-sie-aus-wie-viele-studierende-in-jeder-jahreszeit-geburtstag-haben" class="section level2">
+<h2><span class="header-section-number">4.2</span> Aufgabe 2) Zählen Sie aus, wie viele Studierende in jeder Jahreszeit Geburtstag haben</h2>
 <p>Um diese Aufgabe zu lösen, bietet es sich an, die Jahreszeitenspalte (Spalte <strong>A</strong>) zunächst zu sortieren. Markieren Sie dazu mittels “Klicken und Ziehen” den gesamten Abschnitt in Spalte <strong>A</strong>, in dem die Jahreszeiten stehen. Danach finden Sie oben rechts im Menübereich die Rubrik <strong>“Sortieren und Filtern”</strong>. Unten sehen Sie wieder ein Beispielbild. Dort können Sie auswählen, ob sie die Spalte “rückwärts” von Z nach A oder “vorwärts” von A nach Z sortieren wollen. Wir nehmen in diesem Fall von Z nach A, da dann der Winter, mit dem das Jahr beginnt, oben steht.</p>
 <p><br /></p>
 <p><img src="images/q1_01einf/excel_marksort.PNG" style="width:100.0%" /> <br /></p>
@@ -455,7 +534,9 @@ $(document).ready(function () {
 </div>
 <p><br /></p>
 <p><br /></p>
-<p><strong>Aufgabe 3) Zählen Sie aus, wie viele Studierende in jedem Monat Geburtstag haben</strong></p>
+</div>
+<div id="aufgabe-3-zählen-sie-aus-wie-viele-studierende-in-jedem-monat-geburtstag-haben" class="section level2">
+<h2><span class="header-section-number">4.3</span> Aufgabe 3) Zählen Sie aus, wie viele Studierende in jedem Monat Geburtstag haben</h2>
 <p>Um diese Aufgabe zu lösen, könnten Sie natürlich jetzt alles nach “Monat” sortieren und wieder mit der Summen-Funktion arbeiten. Excel hält aber eine ganze Menge Funktionen bereit und für die jetzige Aufgabe gibt es eine viel elegantere Lösung, die uns eine Menge Zeit erspart. Allerdings ist die dazugehörige Funktion dafür auch etwas komplexer.</p>
 <p>Die Funktion, die wir verwenden, heißt <strong>=SUMMEWENN()</strong>. Wie der Name schon andeutet, berechnet diese Funktion eine Summe <strong>wenn</strong> ein bestimmtes Kriterium erfüllt ist.</p>
 <p>In unserem Fall möchten wir immer dann alle Studierenden aufsummieren, wenn sie z.B. im Dezember Geburtstag haben (und danch alle, die im Januar Geburtstag haben usw.). Schreiben Sie sich daher zunächst die Monatsnamen in die noch leere Spalte “Monat” der Ergebnistabelle, so wie es im Bild unten bereits zu sehen ist.</p>
@@ -489,9 +570,15 @@ $(document).ready(function () {
 <p><strong>TIPP:</strong> <em>Ein sehr guter YouTube-Kanal rund um Excel ist der Kanal</em> <strong>TableTorial</strong> <em>. Das Video dieses Kanals, welches das Fixieren von Zellen ausführlich behandelt, finden Sie <a href="https://www.youtube.com/watch?v=jldnaofJAC4">hier</a>. Da das Fixieren von Zellen äußerst wichtig ist, sollten Sie sich auf jeden Fall die Zeit nehmen, auch dieses Video zu schauen.</em></p>
 </div>
 <p><br /> <br /></p>
-<p><strong>Aufgabe 4) Bestimmen Sie den prozentualen Anteil der Studierenden, die in jeder Jahreszeit Geburtstag haben</strong></p>
+</div>
+<div id="aufgabe-4-bestimmen-sie-den-prozentualen-anteil-der-studierenden-die-in-jeder-jahreszeit-geburtstag-haben" class="section level2">
+<h2><span class="header-section-number">4.4</span> Aufgabe 4) Bestimmen Sie den prozentualen Anteil der Studierenden, die in jeder Jahreszeit Geburtstag haben</h2>
 <p>Mit den Dingen, die Sie heute bereits gelernt haben (und mit ein wenig Nachdenken), können Sie versuchen, die vierte Aufgabe nun ganz alleine zu lösen. Zur Not wissen Sie ja jetzt auch, wo die zweite Arbeitsmappe mit der Lösung ist.</p>
 <p><br /></p>
+</div>
+</div>
+<div id="fragen-zur-selbstkontrolle" class="section level1">
+<h1><span class="header-section-number">5</span> Fragen zur Selbstkontrolle</h1>
 <!---LEARNR EX 1-->
 <iframe style="margin:0 auto; min-width: 100%;" id="myIframe1" class="interactive" src="https://simonstephan.shinyapps.io/learnr_app1/" scrolling="no" frameborder="no">
 </iframe>
@@ -502,8 +589,11 @@ $(document).ready(function () {
 </script>
 </div>
 
+<p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
 
 
+</div>
+</div>
 
 </div>
 
@@ -536,6 +626,32 @@ $(document).ready(function () {
 
 <!-- code folding -->
 
+<script>
+$(document).ready(function ()  {
+
+    // move toc-ignore selectors from section div to header
+    $('div.section.toc-ignore')
+        .removeClass('toc-ignore')
+        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
+
+    // establish options
+    var options = {
+      selectors: "h1,h2,h3",
+      theme: "bootstrap3",
+      context: '.toc-content',
+      hashGenerator: function (text) {
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
+      },
+      ignoreSelector: ".toc-ignore",
+      scrollTo: 0
+    };
+    options.showAndHide = true;
+    options.smoothScroll = true;
+
+    // tocify
+    var toc = $("#TOC").tocify(options).data("toc-tocify");
+});
+</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
