--- a/page-02datenaufb.html
+++ b/page-02datenaufb.html
@@ -19,6 +19,9 @@
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
@@ -262,6 +265,69 @@ $(document).ready(function () {
 
 
 
+<style type="text/css">
+
+#TOC {
+  margin: 25px 0px 20px 0px;
+}
+@media (max-width: 768px) {
+#TOC {
+  position: relative;
+  width: 100%;
+}
+}
+
+@media print {
+.toc-content {
+  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
+  float: right;
+}
+}
+
+.toc-content {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+div.main-container {
+  max-width: 1200px;
+}
+
+div.tocify {
+  width: 20%;
+  max-width: 260px;
+  max-height: 85%;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div.tocify {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  div.tocify {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+.tocify ul, .tocify li {
+  line-height: 20px;
+}
+
+.tocify-subheader .tocify-item {
+  font-size: 0.90em;
+}
+
+.tocify .list-group-item {
+  border-radius: 0px;
+}
+
+
+</style>
+
+
 
 </head>
 
@@ -269,6 +335,16 @@ $(document).ready(function () {
 
 
 <div class="container-fluid main-container">
+
+
+<!-- setup 3col/9col grid for toc_float and main content  -->
+<div class="row-fluid">
+<div class="col-xs-12 col-sm-4 col-md-3">
+<div id="TOC" class="tocify">
+</div>
+</div>
+
+<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -379,17 +455,16 @@ $(document).ready(function () {
 <p>Bei allen Datensätzen handelt es sich um simple Umfragen und nicht um Experimente. Was unterscheidet eine Umfrage von einem Experiment? Mehr Infos dazu finden sie <a href="https://lexikon.stangl.eu/3447/experiment/">hier</a>.</p>
 <p>Das Vorgehen wird hier nur für den Umwelt-Fragebogen veranschaulicht. Die Auswertungsschritte für den Prokrastinations-Fragebogen sind weitgehend identisch und können der Musterlösung entnommen werden.</p>
 <p><br /></p>
-<div id="der-datensatz" class="section level2">
-<h2>Der Datensatz</h2>
+<div id="der-datensatz" class="section level1">
+<h1><span class="header-section-number">1</span> Der Datensatz</h1>
 <p>Der Umweltfragebogen besteht aus 10 Fragen (auch “Items” genannt). In unserem Datensatz bekommt jedes Item eine eigene Spalte und jede Zeile beinhaltet die Antworten einer anonymen Versuchsperson (also einer Person aus dem Quanti-Jahrgang 2019/20).</p>
 <p>Rechts ist ersichtlich, welches Kürzel in den Spaltenüberschriften zu welcher Frage gehört.</p>
 <p>In der Tabelle stehen die Antworten, die die Versuchspersonen auf die verschiedenen Fragen angekreuzt haben (auf der Skala von 1 - “nie” bis 6 - “immer”).</p>
 <p><br /></p>
 <p><img src="images/q1_02umfr/excel_datensatz.png#bordered" style="width:100.0%" /></p>
 <p><br /> <br /></p>
-</div>
 <div id="items-rekodieren" class="section level2">
-<h2>Items rekodieren</h2>
+<h2><span class="header-section-number">1.1</span> Items rekodieren</h2>
 <p>Beim Lesen der Fragen fällt auf, dass nicht alle Fragen “in dieselbe Richtung formuliert” sind. Bei manchen Fragen zeigt ein hoher Wert auf der Skala ein besonders umweltfreundliches Verhalten an, bei anderen Fragen zeigt er ein besonders umweltschädliches Verhalten an. Wir wollen alle Items zur Vereinfachung der Auswertung so umkodieren, dass ein hoher Wert für ein <strong>umweltfreundliches</strong> Verhalten steht. Welche Items müssen wir “umdrehen” und wie könnte das funktionieren?</p>
 <p>Es bietet sich an, die Spalten mit den zu invertierenden Items zunächst einmal farblich zu kennzeichnen und rechts von ihnen eine neue, leere Spalte anzulegen. Diese zunächst leere Spalte kann dann später die invertierten Werte beinhalten. Um in Excel eine neue Spalte zwischen bestehende Spalten einzufügen, kann man einfach eine bestehende Spalte komplett auswählen (indem man oben auf den Buchstaben klickt, der sie kennzeichnet). Durch Rechtsklick auf den nun markierten Bereich erscheint ein Menü, hier “Zellen einfügen” auswählen. <strong>Links von der markierten Spalte</strong> erscheint eine leere Spalte.</p>
 <p>Im untenstehenden Screenshot ist Item U1 gelb markiert, da es sich hierbei um eine Frage handelt, bei der ein hoher Wert ein umweltschädliches Verhalten anzeigt (Batterien in den Hausmüll werfen). Rechts von der Spalte, die U1 enthält, wird eine neue Spalte eingefügt. Wir nennen sie “U1_r”, weil hier die rekodierten Werte für U1 eingetragen werden sollen.</p>
@@ -400,7 +475,7 @@ $(document).ready(function () {
 <p><br /></p>
 </div>
 <div id="summenscores-bilden" class="section level2">
-<h2>Summenscores bilden</h2>
+<h2><span class="header-section-number">1.2</span> Summenscores bilden</h2>
 <p>Wenn die nötigen Items rekodiert wurden, kann man pro Person einen Summenscore bilden, der ihr umweltbezogenes Verhalten widerspiegelt. Nach dem Rekodieren bedeuten höhere Werte auf allen Items ein umweltfreundlicheres Verhalten. Je höher also die Summe aller Items einer Person zusammengenommen, desto umweltfreundlicher verhält sie sich - oder behauptet es zumindest im Fragebogen.</p>
 <p>Wir haben gesehen, dass die Werte von jeder Versuchsperson in einer Zeile angeordnet sind. Man könnte also denken, dass wir für den Summenscore nun einfach die Summe jeder Zeile bilden müssen. Ganz so leicht geht es in diesem Fall aber nicht, da wir natürlich berücksichtigen müssen, dass wir von einigen Items zwei Versionen haben - die originale und die rekodierte. Im Summenscore wollen wir natürlich nur die rekodierte Version dieser Items berücksichtigen (bei denen ein höherer Wert für ein umweltfreundlicheres Verhalten steht).</p>
 <p>Wenn wir in der letzten Spalte der Tabelle anfangen, eine Summe pro Zeile zu bilden, können wir gezielt angeben, welche Werte summiert werden sollen und welche nicht. Nach dem Eintippen von “=SUMME(” halten wir dazu einfach die Strg-Taste gedrückt (Mac: Befehlstaste) und wählen die Zellen aus, die in den Summenscore eingehen sollen. Das sind einmal die Items, die von Anfang an richtig kodiert warten und andererseits die rekodierten Versionen von den Items, die es zu Beginn nicht waren (U1 ist also <strong>nicht</strong> drin, U1_r schon - usw.). Oben sind die genauen Zellenbezüge zu sehen, die natürlich auch einfach eingetippt werden können. Danach schließen wir die Klammer des Summenbefehls und drücken auf Enter.</p>
@@ -410,7 +485,7 @@ $(document).ready(function () {
 <p><br /></p>
 </div>
 <div id="summenscores-auszählen" class="section level2">
-<h2>Summenscores auszählen</h2>
+<h2><span class="header-section-number">1.3</span> Summenscores auszählen</h2>
 <p>Wir wollen nun wissen, wie viele Personen einen unterdurchschnittlichen, durchschnittlichen und überdurchschnittlichen Summenscore erreicht haben. Die numerischen Grenzen für jede dieser Kategorien stehen in der Arbeitsmappe. Um die Anzahl der Personen mit unterdurchschnittlich gutem Umweltverhalten zu ermitteln, wollen wir beispielsweise auszählen, wie viele Leute einen Summenscore &lt;= 39 erzielt haben. Das geht mit der sehr nützlichen “ZÄHLENWENN”-Funktion. Diese Funktion zählt einfach aus, wie viele Werte in einem definierten Bereich (hier: unsere Summenscores) ein bestimmtes Kriterium (hier: “&lt;= 39”, oder identisch “&lt;40” ) erfüllen. Das Kriterium muss in Anführungszeichen gesetzt werden, auch wenn es numerisch ist:</p>
 <p><br /></p>
 <p><img src="images/q1_02umfr/excel_zählenwenn.png#bordered" style="width:100.0%" /></p>
@@ -426,17 +501,21 @@ $(document).ready(function () {
 <p><br /></p>
 </div>
 <div id="ein-histogramm-erstellen" class="section level2">
-<h2>Ein Histogramm erstellen</h2>
+<h2><span class="header-section-number">1.4</span> Ein Histogramm erstellen</h2>
 <p>Nun wollen wir unsere Werteverteilung graphisch darstellen. Dafür eignet sich ein <strong>Histogramm</strong>. Das ist eine Graphik, die die Anzahl von Messwerten in bestimmten Kategorien veranschaulicht. Das Erstellen von Graphiken in Excel lässt sich besser zeigen als beschreiben. Unten finden Sie deshalb ein kurzes Video, in dem wir Ihnen zeigen, wie man ein Histogramm erstellt:</p>
 <p><br /></p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/A4wCaxV8bJ0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 <p><br /> <br /></p>
 </div>
-<div id="zum-weiteren-üben" class="section level2">
-<h2>Zum weiteren Üben</h2>
+</div>
+<div id="zum-weiteren-üben" class="section level1">
+<h1><span class="header-section-number">2</span> Zum weiteren Üben</h1>
 <p>In der Excel-Datei zu dieser Sitzung finden Sie in einer separaten Arbeitsmappe auch die Daten und weitere Aufgaben für den Prokrastinationsfragebogen. Bearbeiten Sie diese Aufgaben eigenständig.</p>
 <p><br /> <br /></p>
+</div>
+<div id="fragen-zur-selbstkontrolle" class="section level1">
+<h1><span class="header-section-number">3</span> Fragen zur Selbstkontrolle</h1>
 <!---LEARNR-->
 <iframe style="margin:0 auto; min-width: 100%;" id="myIframe1" class="interactive" src="https://simonstephan.shinyapps.io/q1_02umfragen/" scrolling="no" frameborder="no">
 </iframe>
@@ -450,6 +529,8 @@ $(document).ready(function () {
 <p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
 
 
+</div>
+</div>
 
 </div>
 
@@ -482,6 +563,32 @@ $(document).ready(function () {
 
 <!-- code folding -->
 
+<script>
+$(document).ready(function ()  {
+
+    // move toc-ignore selectors from section div to header
+    $('div.section.toc-ignore')
+        .removeClass('toc-ignore')
+        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
+
+    // establish options
+    var options = {
+      selectors: "h1,h2,h3",
+      theme: "bootstrap3",
+      context: '.toc-content',
+      hashGenerator: function (text) {
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
+      },
+      ignoreSelector: ".toc-ignore",
+      scrollTo: 0
+    };
+    options.showAndHide = true;
+    options.smoothScroll = true;
+
+    // tocify
+    var toc = $("#TOC").tocify(options).data("toc-tocify");
+});
+</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
