--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -409,7 +409,7 @@ body {
 <div id="sitzung-4-arbeiten-mit-wahrscheinlichkeitsverteilungen" class="section level4">
 <h4>Sitzung 4: Arbeiten mit Wahrscheinlichkeitsverteilungen</h4>
 <ul>
-<li>Link dann hier</li>
+<li>Excel-Datensatz “Wahrscheinlichkeitsverteilungen”: <a href="q1_dataFiles/04_Wahrscheinlichkeitsverteilungen.xlsx">download</a></li>
 </ul>
 </div>
 <div id="sitzung-5-mittelwerte-standardfehler-und-konfidenzintervall" class="section level4">
