--- a/page-05m_se_ki.html
+++ b/page-05m_se_ki.html
@@ -369,7 +369,7 @@ $(document).ready(function () {
 </div>
 
 
-
+<p><br /> <iframe width="800" height="600" src="https://rpsychologist.com/d3/ci/" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br /> <br /></p>
 
 <p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
 
