--- a/page-03deskriptiv.html
+++ b/page-03deskriptiv.html
@@ -498,7 +498,7 @@ div.tocify {
 <h2><span class="header-section-number">2.1</span> Die Daten</h2>
 <p>Die Excel-Datei mit den Ergebnissen des Experiments können Sie <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2019.xlsx">hier</a> herunterladen. Die erste Arbeitsmappe sollte dann so aussehen, wie unten abgebildet.</p>
 <p><br></p>
-<p><img src="images/q1_03exp/trolley_data.png#bordered" /></p>
+<p><img src="images/q1_03exp/trolley_data.PNG#bordered" style="width:100.0%" /></p>
 <p><br> <br></p>
 <p>Die verschiedenen Spalten bedeuten folgendes:</p>
 <ul>
