--- a/page-06mdiffs.html
+++ b/page-06mdiffs.html
@@ -371,7 +371,7 @@ $(document).ready(function () {
 
 
 
-<p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
+<p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
 
 
