--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,1 @@
-<p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
+<p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
