--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ $(document).ready(function () {
 <p><br></p>
 <p>Viel Spaß!</p>
 
-<p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
+<p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
 
 
