--- a/page-02datenaufb.html
+++ b/page-02datenaufb.html
@@ -526,7 +526,7 @@ div.tocify {
 </script>
 </div>
 
-<p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
+<p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
 
 </div>
