--- a/page-03deskriptiv.html
+++ b/page-03deskriptiv.html
@@ -646,7 +646,7 @@ div.tocify {
 </script>
 </div>
 
-<p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
+<p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
 
 </div>
