--- a/page-04wsk_vert.html
+++ b/page-04wsk_vert.html
@@ -615,7 +615,7 @@ div.tocify {
 </div>
 </div>
 
-<p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
+<p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
 
 </div>
