--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -425,7 +425,7 @@ body {
 </ul>
 </div>
 
-<p><font size="-1.5">Copyright &copy; 2020 Quanti-Team. All rights reserved.</font></p>
+<p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
 
 
