--- a/page-02datenaufb.html
+++ b/page-02datenaufb.html
@@ -471,7 +471,7 @@ div.tocify {
 
 <div class="column-right">
 <div class="figure">
-<img src="images/q1_02umfr/squirrel_litter.png" />
+<img src="images/q1_02umfr/squirrel_litter.PNG" />
 
 </div>
 </div>
