--- a/page-03deskriptiv.html
+++ b/page-03deskriptiv.html
@@ -496,7 +496,7 @@ div.tocify {
 <p><br></p>
 <div id="die-daten" class="section level2">
 <h2><span class="header-section-number">2.1</span> Die Daten</h2>
-<p>Die Excel-Datei mit den Ergebnissen des Experiments können Sie <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2019.xlsx">hier</a> herunterladen. Die erste Arbeitsmappe sollte dann so aussehen, wie unten abgebildet.</p>
+<p>Die Excel-Datei mit den Ergebnissen des Experiments können Sie <a href="q1_dataFiles/03_Experimente_und_deskriptive_Statistik.xlsx">hier</a> herunterladen. Die erste Arbeitsmappe sollte dann so aussehen, wie unten abgebildet.</p>
 <p><br></p>
 <p><img src="images/q1_03exp/trolley_data.PNG#bordered" style="width:100.0%" /></p>
 <p><br> <br></p>
@@ -621,7 +621,7 @@ div.tocify {
 </div>
 <div id="zusatzaufgabe-zum-weiteren-üben" class="section level1">
 <h1><span class="header-section-number">3</span> Zusatzaufgabe zum weiteren Üben</h1>
-<p>Wir haben noch einen zusätzlichen Datensatz für Sie, mit dem Sie noch einmal alles üben können. Den Datensatz finden Sie <a href="q1_dataFiles/03_Experimente%20und%20deskriptive%20Statistik_Zusatzaufgabe_HoernchenFitness.xlsx">hier</a>.</p>
+<p>Wir haben noch einen zusätzlichen Datensatz für Sie, mit dem Sie noch einmal alles üben können. Den Datensatz finden Sie <a href="q1_dataFiles/03_Experimente_und_deskriptive_Statistik_Zusatzaufgabe_HoernchenFitness.xlsx">hier</a>.</p>
 <p><br></p>
 <div id="szenario" class="section level2">
 <h2><span class="header-section-number">3.1</span> Szenario</h2>
