--- a/page-03deskriptiv.html
+++ b/page-03deskriptiv.html
@@ -575,7 +575,7 @@ div.tocify {
 <h3><span class="header-section-number">2.2.4</span> Minimum, Maximum, Median und Quartile</h3>
 <p>Als letztes gibt es noch eine kleine Tabelle in die <strong>Minimum</strong>, <strong>25% Quartil</strong>, <strong>Median</strong> und <strong>75% Quartil</strong> und <strong>Maximum</strong> für die beiden Versuchsgruppen eingetragen werden sollen. Was Minimum und Maximum ist, dürfte Ihnen natürlich schon klar sein. Aber was ist der Median? Und was sind das 25% und das 75% Quartil? Schauen Sie sich dazu den Zahlenstrahl unten an, bei dem eine Reihe von 8 Werten aufsteigend von links nach rechts sortiert ist.</p>
 <p><br></p>
-<p><img src="images/q1_03exp/minmax.png#bordered" /></p>
+<p><img src="images/q1_03exp/minmax.PNG#bordered" /></p>
 <p><br> <br></p>
 <p><br></p>
 <p><img src="images/q1_03exp/med.PNG" /></p>
