--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -399,8 +399,9 @@ body {
 <div id="sitzung-3-deskriptive-datenanalyse-und-grafiken" class="section level4">
 <h4>Sitzung 3: Deskriptive Datenanalyse und Grafiken</h4>
 <ul>
-<li>Excel-Datensatz “Trolley-Dilemma”: <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2019.xlsx">download</a></li>
-<li>Excel-Datensatz “Nussdiät und Fitness von Eichhörnchen”: <a href="q1_dataFiles/03_Experimente%20und%20deskriptive%20Statistik_Zusatzaufgabe_HoernchenFitness.xlsx">download</a></li>
+<li>Excel-Datensatz “Trolley-Dilemma”: <a href="q1_dataFiles/03_Experimente_und_deskriptive_Statistik.xlsx">download</a></li>
+<li>Excel-Datensatz “Trolley-Dilemma WiSe 20/21”: <a href="q1_dataFiles/03_TrolleyData_WiSe20_Push_vs_Switch.xlsx">download</a></li>
+<li>Excel-Datensatz “Nussdiät und Fitness von Eichhörnchen”: <a href="q1_dataFiles/03_Experimente_und_deskriptive_Statistik_Zusatzaufgabe_HoernchenFitness.xlsx">download</a></li>
 </ul>
 <hr />
 <h2>
