--- a/page-04wsk_vert.html
+++ b/page-04wsk_vert.html
@@ -406,6 +406,21 @@ div.tocify {
     <li>
       <a href="page-06mdiffs.html">Sitzung 6: Mittelwertsunterschiede prüfen - t-Tests</a>
     </li>
+    <li>
+      <a href="page-07testpl.html">Sitzung 7: G*Power zur Testplanung</a>
+    </li>
+    <li>
+      <a href="page-08kontraste.html">Sitzung 8: Kontraste</a>
+    </li>
+    <li>
+      <a href="page-09wilcoxon.html">Sitzung 9: Wilcoxon-Tests</a>
+    </li>
+    <li>
+      <a href="page-10korrelz.html">Sitzung 10: Korrelationen und z-Test</a>
+    </li>
+    <li>
+      <a href="page-11chisquared.html">Sitzung 11: Chi-Quadrat Test</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
