--- a/page-05m_se_ki.html
+++ b/page-05m_se_ki.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Sitzung 5: Inferenzstatistik – Mittelwertsunterschiede bei unabhängigen Stichproben</title>
+<title>Sitzung 5: Inferenzstatistik – Mittelwerte, Standardfehler und Konfidenzintervall</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -330,6 +330,21 @@ $(document).ready(function () {
     <li>
       <a href="page-06mdiffs.html">Sitzung 6: Mittelwertsunterschiede prüfen - t-Tests</a>
     </li>
+    <li>
+      <a href="page-07testpl.html">Sitzung 7: G*Power zur Testplanung</a>
+    </li>
+    <li>
+      <a href="page-08kontraste.html">Sitzung 8: Kontraste</a>
+    </li>
+    <li>
+      <a href="page-09wilcoxon.html">Sitzung 9: Wilcoxon-Tests</a>
+    </li>
+    <li>
+      <a href="page-10korrelz.html">Sitzung 10: Korrelationen und z-Test</a>
+    </li>
+    <li>
+      <a href="page-11chisquared.html">Sitzung 11: Chi-Quadrat Test</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -364,7 +379,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Sitzung 5: Inferenzstatistik – Mittelwertsunterschiede bei unabhängigen Stichproben</h1>
+<h1 class="title toc-ignore">Sitzung 5: Inferenzstatistik – Mittelwerte, Standardfehler und Konfidenzintervall</h1>
 
 </div>
 
