--- a/page-11chisquared.html
+++ b/page-11chisquared.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Sitzung 1: Einführung in R</title>
+<title>Sitzung 11: Chi-Quadrat Test</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -379,12 +379,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Sitzung 1: Einführung in R</h1>
+<h1 class="title toc-ignore">Sitzung 11: Chi-Quadrat Test</h1>
 
 </div>
 
 
-<p>Hier die Zusammenfassung für die Einführungssitzung.</p>
+
 
 <p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
