--- a/page-05m_se_ki.html
+++ b/page-05m_se_ki.html
@@ -384,7 +384,12 @@ $(document).ready(function () {
 </div>
 
 
+<p>Inhalt folgt.</p>
+<p><br /> <iframe width="800" height="600" src="http://onlinestatbook.com/stat_sim/sampling_dist/index.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br /> <br /></p>
+<div id="simulation-für-konfidenzintervalle" class="section level1">
+<h1>Simulation für Konfidenzintervalle</h1>
 <p><br /> <iframe width="800" height="600" src="https://rpsychologist.com/d3/ci/" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br /> <br /></p>
+</div>
 
 <p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
