--- a/page-05m_se_ki.html
+++ b/page-05m_se_ki.html
@@ -384,8 +384,14 @@ $(document).ready(function () {
 </div>
 
 
-<p>Inhalt folgt.</p>
+<p>Mit dem Wissen über Wahrscheinlichkeitsverteilungen, das Sie sich inzwischen angeeignet haben, können wir nun einen weiteren Schritt zur Inferenzstatistik (auch “schließende Statistik” genannt) machen.</p>
+<p>Wie Sie in der Vorlesung mitbekommen haben, geht es in der Inferenzstatistik darum, von Befunden aus Stichproben gezogen aus einer Grundgesamtheit/ Population auf Merkmale eben dieser Grundgesamtheit/ Population zu schließen. PsychologInnen könnten sich bspw. die Frage stellen, ob laute Musik in der Umgebung einen negativen Einfluss auf die kognitive Leistungsfähigkeit hat. Zur Klärung dieser Frage ziehen sie eine zufällige Stichprobe von Menschen aus der Bevölkerung, setzen diese lauter Musik aus, und messen anschließend deren IQ mit Hilfe eines IQ-Tests. Zur Kontrolle gibt es eine weitere Zufallsstichprobe, deren IQ in stiller Umgebung erfasst wird.</p>
+<p>Wie Sie schon wissen, ist Intelligenz (gemessen als IQ) ein in der Population normalverteiltes Merkmal, das den Mittelwert 100 IQ-Punkte und eine Streuung von 15 IQ-Punkten hat. Die IQ-Verteilung der Population sie also so aus:</p>
+<p><img src="page-05m_se_ki_files/figure-html/unnamed-chunk-1-1.png" width="672" /></p>
+<div id="simulation-sampling-distribution" class="section level1">
+<h1>Simulation Sampling Distribution</h1>
 <p><br /> <iframe width="800" height="600" src="http://onlinestatbook.com/stat_sim/sampling_dist/index.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br /> <br /></p>
+</div>
 <div id="simulation-für-konfidenzintervalle" class="section level1">
 <h1>Simulation für Konfidenzintervalle</h1>
 <p><br /> <iframe width="800" height="600" src="https://rpsychologist.com/d3/ci/" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br /> <br /></p>
