--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -433,7 +433,8 @@ body {
 <div id="sitzung-5-mittelwerte-standardfehler-und-konfidenzintervall" class="section level4">
 <h4>Sitzung 5: Mittelwerte, Standardfehler und Konfidenzintervall</h4>
 <ul>
-<li>Link dann hier</li>
+<li>Excel-Datensatz “Standardfehler und Konfidenzintervalle IQ-Studie”: <a href="q1_dataFiles/05_Standardfehler_Konfidenzintervalle.xlsx">download</a></li>
+<li>Excel-Datensatz “Standardfehler und Konfidenzintervalle Depressions-Studie”: <a href="q1_dataFiles/05_Standardfehler_Konfidenzintervalle_Zusatzaufgabe.xlsx">download</a></li>
 </ul>
 </div>
 <div id="sitzung-6-mittelwertsunterschiede-prüfen---t-tests" class="section level4">
