--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -440,7 +440,7 @@ body {
 <div id="sitzung-6-mittelwertsunterschiede-prüfen---t-tests" class="section level4">
 <h4>Sitzung 6: Mittelwertsunterschiede prüfen - t-Tests</h4>
 <ul>
-<li>Link dann hier</li>
+<li>Excel-Datensatz “Signifikanztests”: <a href="q1_dataFiles/06_Signifikanztests.xlsx">download</a></li>
 </ul>
 </div>
 
